<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="409dp"
    android:layout_height="729dp"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="1dp"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="410dp"
            android:layout_height="85dp"
            android:alpha="1"
            android:background="@color/teal_700"
            android:gravity="center"
            android:text="@string/covid_19"
            android:textColor="@color/black"
            android:textSize="35sp" />

        <Button
            android:id="@+id/b6"
            android:layout_width="410dp"
            android:layout_height="122dp"
            android:alpha="1"
            android:background="@color/material_on_surface_stroke"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/click_here_for_general_mental_health"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <Button
            android:id="@+id/b7"
            android:layout_width="410dp"
            android:layout_height="107dp"
            android:alpha="1"
            android:background="@color/material_on_surface_stroke"
            android:gravity="center"
            android:text="@string/some_tips_to_be_strong"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <Button
            android:id="@+id/b8"
            android:layout_width="410dp"
            android:layout_height="105dp"
            android:alpha="1"
            android:background="@color/material_on_surface_stroke"
            android:gravity="center"
            android:text="@string/dealing_with_anxiety"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <Button
            android:id="@+id/b9"
            android:layout_width="410dp"
            android:layout_height="123dp"
            android:alpha="1"
            android:background="@color/material_on_surface_stroke"
            android:gravity="center"
            android:text="@string/coping_with_stress_fear_and_worry"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <Button
            android:id="@+id/b10"
            android:layout_width="410dp"
            android:layout_height="100dp"
            android:alpha="1"
            android:background="@color/material_on_surface_stroke"
            android:gravity="center"
            android:text="@string/do_and_don_ts"
            android:textColor="@color/black"
            android:textSize="30sp" />
    </LinearLayout>

</ScrollView>